plugins {
    id 'java'
}

group = 'io.llmcompactor'
version = '0.1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.14.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.14.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.14.3'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.14.3'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

test {
    useJUnitPlatform()
}
